# twit/models/requests/user.models.go
@@ -1,7 +1,0 @@
-package requests
-
-type RegisterUserRequest struct {
-	Email    string `json:"email"`
-	Password string `json:"password"`
-	Username string `json:"username"`
-}
