# twit/models/requests/user.requests.go
@@ -1,0 +1,12 @@
+package requests
+
+type RegisterUserRequest struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+	Username string `json:"username"`
+}
+
+type LoginUserRequest struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
